horizontal scroll fixed

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -39,7 +39,8 @@ body {
   position: relative;
   box-sizing: border-box;
   width: 100vw;
-  overflow-x: hidden;
+  max-width: 100%;
+  /* overflow-x: hidden; */
   margin: 0;
   padding: 0;
   font-family: $text-font;
